Added empty models

--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,9 @@
         <!-- build:js({.tmp,app}) scripts/main.js -->
         <script src="scripts/main.js"></script>
         <script src="scripts/templates.js"></script>
+        <script src="scripts/models/team.js"></script>
+        <script src="scripts/models/game.js"></script>
+        <script src="scripts/models/stadium.js"></script>
         <!-- endbuild -->
 </body>
 </html>
