--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,13 @@
         <![endif]-->
 
 
-        
+        <h1>Fußballweltmeisterschaft 2014</h1>
+
+        <div class="hexagon">
+          <div class="hexagon__content knockout">
+            <div class="knockout__id">AF 1</div>
+          </div>
+        </div>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
