--- a/app/index.html
+++ b/app/index.html
@@ -22,11 +22,82 @@
 
         <h1>Fußballweltmeisterschaft 2014</h1>
 
-        <div class="hexagon">
-          <div class="hexagon__content knockout">
-            <div class="knockout__id">AF 1</div>
+        <div class="knockout">
+          <div class="hexagon hexagon--a-b">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--b-a">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--c-d">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--d-c hexagon--full">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--spacer">
+          </div>
+          <div class="hexagon hexagon--qf hexagon--full">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
           </div>
         </div>
+
+        <div class="knockout">
+          <div class="hexagon hexagon--push">
+          </div>
+          <div class="hexagon hexagon--e-f">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--f-e">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--g-h">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--qf">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--qf hexagon--full">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+        </div>
+        <div class="knockout">
+          <div class="hexagon"></div>
+          <div class="hexagon"></div>
+          <div class="hexagon"></div>
+          <div class="hexagon hexagon--h-g hexagon--full">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+          <div class="hexagon hexagon--spacer"></div>
+          <div class="hexagon hexagon--qf hexagon--full">
+            <div class="hexagon__content match match--knockout">
+              <div class="match__id">AF 1</div>
+            </div>
+          </div>
+        </div>
+
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
