--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,11 @@
         <![endif]-->
 
 
-        <h1>Fußballweltmeisterschaft 2014</h1>
+        <h1 class="header">
+          <span class="header__title">Fußballweltmeisterschaft</span>
+          <br/>
+          <span class="header__year">2014</span>
+        </h1>
 
         <div class="knockout">
           <div class="hexagon hexagon--a-b">
