Single group table

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
           <span class="header__year">2014</span>
         </h1>
 
-        <div class="knockout">
+        <div class="knockout-matches">
           <div class="hexagon hexagon--a-b">
             <div class="hexagon__content match match--knockout">
               <div class="match__id">AF 1</div>
@@ -56,7 +56,7 @@
           </div>
         </div>
 
-        <div class="knockout">
+        <div class="knockout-matches">
           <div class="hexagon hexagon--push">
           </div>
           <div class="hexagon hexagon--e-f">
@@ -85,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="knockout">
+        <div class="knockout-matches">
           <div class="hexagon"></div>
           <div class="hexagon"></div>
           <div class="hexagon"></div>
@@ -99,6 +99,65 @@
             <div class="hexagon__content match match--knockout">
               <div class="match__id">AF 1</div>
             </div>
+          </div>
+        </div>
+
+        <div class="group-matches">
+          <div class="group group--a">
+            <h2 class="group__name">Gruppe A</h2>
+            <h3 class="group__teams">Brasilien | Kroatien | Mexico | Kamerun</h3>
+            <table class="group__table">
+              <tbody>
+                <tr class="match">
+                  <td class="match__date">12.06.</td>
+                  <td class="match__time">22:00</td>
+                  <td class="match__stadium">Arena de São Paulo</td>
+                  <td class="match__city">São Paulo</td>
+                  <td class="match__teams">Brasilien - Kroatien</td>
+                  <td class="match__result"></td>
+                </tr>
+                <tr class="match">
+                  <td class="match__date">13.06.</td>
+                  <td class="match__time">18:00</td>
+                  <td class="match__stadium">Estádio das Dunas</td>
+                  <td class="match__city">Natal</td>
+                  <td class="match__teams">Mexiko - Kamerun</td>
+                  <td class="match__result"></td>
+                </tr>
+                <tr class="match">
+                  <td class="match__date">17.06.</td>
+                  <td class="match__time">21:00</td>
+                  <td class="match__stadium">Estádio Castelão</td>
+                  <td class="match__city">Fortaleza</td>
+                  <td class="match__teams">Brasilien - Mexiko</td>
+                  <td class="match__result"></td>
+                </tr>
+                <tr class="match">
+                  <td class="match__date">19.06.</td>
+                  <td class="match__time">00:00</td>
+                  <td class="match__stadium">Arena Amazônia</td>
+                  <td class="match__city">Manaus</td>
+                  <td class="match__teams">Kamerun - Kroatien</td>
+                  <td class="match__result"></td>
+                </tr>
+                <tr class="match">
+                  <td class="match__date">23.06.</td>
+                  <td class="match__time">22:00</td>
+                  <td class="match__stadium">Estádio Nacional</td>
+                  <td class="match__city">Brasilia</td>
+                  <td class="match__teams">Kamerun - Brasilien</td>
+                  <td class="match__result"></td>
+                </tr>
+                <tr class="match">
+                  <td class="match__date">23.06.</td>
+                  <td class="match__time">22:00</td>
+                  <td class="match__stadium">Arena Pernambuco</td>
+                  <td class="match__city">Recife</td>
+                  <td class="match__teams">Kroatien - Mexiko</td>
+                  <td class="match__result"></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
 
