--- a/app/index.html
+++ b/app/index.html
@@ -201,6 +201,8 @@
         <script src="scripts/models/team.js"></script>
         <script src="scripts/models/game.js"></script>
         <script src="scripts/models/stadium.js"></script>
+        <script src="scripts/models/group.js"></script>
+        <script src="scripts/collections/stadium.js"></script>
         <!-- endbuild -->
 </body>
 </html>
