--- a/app/index.html
+++ b/app/index.html
@@ -203,6 +203,8 @@
         <script src="scripts/models/stadium.js"></script>
         <script src="scripts/models/group.js"></script>
         <script src="scripts/collections/stadium.js"></script>
+        <script src="scripts/collections/group.js"></script>
+        <script src="scripts/collections/team.js"></script>
         <!-- endbuild -->
 </body>
 </html>
