--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
         <script src="scripts/collections/group.js"></script>
         <script src="scripts/collections/team.js"></script>
         <script src="scripts/views/group.js"></script>
+        <script src="scripts/collections/game.js"></script>
         <!-- endbuild -->
 </body>
 </html>
