Group match tables

--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
         <script src="scripts/collections/team.js"></script>
         <script src="scripts/views/group.js"></script>
         <script src="scripts/collections/game.js"></script>
+        <script src="scripts/views/match.js"></script>
         <!-- endbuild -->
 </body>
 </html>
