Renamed game to match

--- a/app/index.html
+++ b/app/index.html
@@ -151,14 +151,14 @@
         <script src="scripts/main.js"></script>
         <script src="scripts/templates.js"></script>
         <script src="scripts/models/team.js"></script>
-        <script src="scripts/models/game.js"></script>
+        <script src="scripts/models/match.js"></script>
         <script src="scripts/models/stadium.js"></script>
         <script src="scripts/models/group.js"></script>
         <script src="scripts/collections/stadium.js"></script>
         <script src="scripts/collections/group.js"></script>
         <script src="scripts/collections/team.js"></script>
         <script src="scripts/views/group.js"></script>
-        <script src="scripts/collections/game.js"></script>
+        <script src="scripts/collections/match.js"></script>
         <script src="scripts/views/match.js"></script>
         <!-- endbuild -->
 </body>
