Better hexagon overlapping. You're the boss, flexbox!

--- a/app/index.html
+++ b/app/index.html
@@ -27,77 +27,78 @@
         </h1>
 
         <div class="knockout-matches">
-          <div class="hexagon hexagon--a-b">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+          <div class="knockout__ui-group knockout__ui-group--three">
+            <div class="hexagon"></div>
+            <div class="hexagon"></div>
+            <div class="hexagon"></div>
+            <div class="hexagon hexagon--h-g hexagon--full">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
+            </div>
+            <div class="hexagon hexagon--spacer"></div>
+            <div class="hexagon hexagon--qf hexagon--full">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
           </div>
-          <div class="hexagon hexagon--b-a">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+          <div class="knockout__ui-group knockout__ui-group--two">
+            <div class="hexagon hexagon--push">
+            </div>
+            <div class="hexagon hexagon--e-f">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
+            </div>
+            <div class="hexagon hexagon--f-e">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
+            </div>
+            <div class="hexagon hexagon--g-h">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
+            </div>
+            <div class="hexagon hexagon--qf">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
+            </div>
+            <div class="hexagon hexagon--qf hexagon--full">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
           </div>
-          <div class="hexagon hexagon--c-d">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+          <div class="knockout__ui-group knockout__ui-group--one">
+            <div class="hexagon hexagon--a-b">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
-          </div>
-          <div class="hexagon hexagon--d-c hexagon--full">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+            <div class="hexagon hexagon--b-a">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
-          </div>
-          <div class="hexagon hexagon--spacer">
-          </div>
-          <div class="hexagon hexagon--qf hexagon--full">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+            <div class="hexagon hexagon--c-d">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
-          </div>
-        </div>
-
-        <div class="knockout-matches">
-          <div class="hexagon hexagon--push">
-          </div>
-          <div class="hexagon hexagon--e-f">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+            <div class="hexagon hexagon--d-c hexagon--full">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
-          </div>
-          <div class="hexagon hexagon--f-e">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+            <div class="hexagon hexagon--spacer">
             </div>
-          </div>
-          <div class="hexagon hexagon--g-h">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
-            </div>
-          </div>
-          <div class="hexagon hexagon--qf">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
-            </div>
-          </div>
-          <div class="hexagon hexagon--qf hexagon--full">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
-            </div>
-          </div>
-        </div>
-        <div class="knockout-matches">
-          <div class="hexagon"></div>
-          <div class="hexagon"></div>
-          <div class="hexagon"></div>
-          <div class="hexagon hexagon--h-g hexagon--full">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
-            </div>
-          </div>
-          <div class="hexagon hexagon--spacer"></div>
-          <div class="hexagon hexagon--qf hexagon--full">
-            <div class="hexagon__content match match--knockout">
-              <div class="match__id">AF 1</div>
+            <div class="hexagon hexagon--qf hexagon--full">
+              <div class="hexagon__content match match--knockout">
+                <div class="match__id">AF 1</div>
+              </div>
             </div>
           </div>
         </div>
