--- a/app/index.html
+++ b/app/index.html
@@ -32,14 +32,18 @@
             <div class="hexagon"></div>
             <div class="hexagon"></div>
             <div class="hexagon hexagon--h-g hexagon--full">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--spacer"></div>
             <div class="hexagon hexagon--qf hexagon--full">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
           </div>
@@ -47,57 +51,77 @@
             <div class="hexagon hexagon--push">
             </div>
             <div class="hexagon hexagon--e-f">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--f-e">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--g-h">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--qf">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--qf hexagon--full">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
           </div>
           <div class="knockout__ui-group knockout__ui-group--one">
             <div class="hexagon hexagon--a-b">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--b-a">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--c-d">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--d-c hexagon--full">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
             <div class="hexagon hexagon--spacer">
             </div>
             <div class="hexagon hexagon--qf hexagon--full">
-              <div class="hexagon__content match match--knockout">
-                <div class="match__id">AF 1</div>
+              <div class="hexagon__background">
+                <div class="hexagon__content match match--knockout">
+                  <div class="match__id">AF 1</div>
+                </div>
               </div>
             </div>
           </div>
