--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
         <title>WorldCupBracket</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +34,6 @@
             <div class="hexagon hexagon--h-g hexagon--full">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
@@ -42,7 +41,6 @@
             <div class="hexagon hexagon--qf hexagon--full">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
@@ -53,35 +51,30 @@
             <div class="hexagon hexagon--e-f">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--f-e">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--g-h">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--qf">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--qf hexagon--full">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
@@ -90,28 +83,24 @@
             <div class="hexagon hexagon--a-b">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--b-a">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--c-d">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
             <div class="hexagon hexagon--d-c hexagon--full">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
@@ -120,7 +109,6 @@
             <div class="hexagon hexagon--qf hexagon--full">
               <div class="hexagon__background">
                 <div class="hexagon__content match match--knockout">
-                  <div class="match__id">AF 1</div>
                 </div>
               </div>
             </div>
