--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+	<a href="https://github.com/zeroseven/wc14-bracket"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 	<!--[if lt IE 10]>
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
@@ -35,14 +36,14 @@
 			<div class="hexagon"></div>
 			<div class="hexagon hexagon--h-g hexagon--full">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-8" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--spacer"></div>
 			<div class="hexagon hexagon--qf hexagon--full">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="qf-3" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
@@ -52,31 +53,31 @@
 			</div>
 			<div class="hexagon hexagon--e-f">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-3" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--f-e">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-7" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--g-h">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-4" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--qf">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="qf-1" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--qf hexagon--full">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="qf-4" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
@@ -84,25 +85,25 @@
 		<div class="knockout__ui-group knockout__ui-group--one">
 			<div class="hexagon hexagon--a-b">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-1" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--b-a">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-5" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--c-d">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-2" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
 			<div class="hexagon hexagon--d-c hexagon--full">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="bo16-6" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
@@ -110,7 +111,7 @@
 			</div>
 			<div class="hexagon hexagon--qf hexagon--full">
 				<div class="hexagon__background">
-					<div class="hexagon__content match match--knockout">
+					<div id="qf-2" class="hexagon__content match match--knockout">
 					</div>
 				</div>
 			</div>
