--- a/app/index.html
+++ b/app/index.html
@@ -133,20 +133,12 @@
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 	<script>
-		(function(b, o, i, l, e, r) {
-			b.GoogleAnalyticsObject = l;
-			b[l] || (b[l] =
-				function() {
-					(b[l].q = b[l].q || []).push(arguments)
-				});
-			b[l].l = +new Date;
-			e = o.createElement(i);
-			r = o.getElementsByTagName(i)[0];
-			e.src = '//www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore(e, r)
-		}(window, document, 'script', 'ga'));
-		ga('create', 'UA-XXXXX-X');
-		ga('send', 'pageview');
+		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+		function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		e.src='//www.google-analytics.com/analytics.js';
+		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		ga('create','UA-XXXXX-X');ga('send','pageview');
 	</script>
 
 	<!-- build:js scripts/vendor.js -->
@@ -157,18 +149,6 @@
 	<!-- endbuild -->
 
 	<!-- build:js scripts/plugins.js -->
-	<script src="bower_components/sass-bootstrap/js/affix.js"></script>
-	<script src="bower_components/sass-bootstrap/js/alert.js"></script>
-	<script src="bower_components/sass-bootstrap/js/dropdown.js"></script>
-	<script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
-	<script src="bower_components/sass-bootstrap/js/modal.js"></script>
-	<script src="bower_components/sass-bootstrap/js/transition.js"></script>
-	<script src="bower_components/sass-bootstrap/js/button.js"></script>
-	<script src="bower_components/sass-bootstrap/js/popover.js"></script>
-	<script src="bower_components/sass-bootstrap/js/carousel.js"></script>
-	<script src="bower_components/sass-bootstrap/js/scrollspy.js"></script>
-	<script src="bower_components/sass-bootstrap/js/collapse.js"></script>
-	<script src="bower_components/sass-bootstrap/js/tab.js"></script>
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/main.js -->
