Semi-finals, consolation match & final match

--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,29 @@
 			</div>
 		</div>
 		<div class="knockout-matches--sf-final">
-			<div class="knockout__ui-group">
+			<div class="knockout__ui-group knockout__ui-group--sf knockout__ui-group--two">
+				<div class="hexagon hexagon--sf">
+					<div class="hexagon__background">
+						<div id="sf-1" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--sf hexagon--full">
+					<div class="hexagon__background">
+						<div id="sf-2" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="knockout__ui-group knockout__ui-group--three">
+				<div class="hexagon hexagon--consolation hexagon--push hexagon--full">
+					<div class="hexagon__background">
+						<div id="consolation" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="knockout__ui-group knockout__ui-group--one">
 				<div class="hexagon hexagon--final">
 					<div class="hexagon__background hexagon__background--final">
 						<div id="final" class="hexagon__content match match--knockout">
