Championshop hexagon. VERY messy.

--- a/app/index.html
+++ b/app/index.html
@@ -142,9 +142,26 @@
 				</div>
 			</div>
 			<div class="knockout__ui-group knockout__ui-group--one">
-				<div class="hexagon hexagon--final">
-					<div class="hexagon__background hexagon__background--final">
-						<div id="final" class="hexagon__content match match--knockout">
+				<div class="hexagon hexagon--double">
+					<div class="hexagon__background hexagon__background--double">
+						<div class="hexagon__content hexagon__content--double">
+							<div class="hexagon hexagon--final hexagon--full">
+								<div class="hexagon__background">
+									<div id="final" class="hexagon__content match match--knockout">
+									</div>
+								</div>
+							</div>
+							<div id="champion" class="hexagon hexagon--champion hexagon--full">
+								<div class="hexagon__background">
+									<div id="champion" class="hexagon__content">
+										<div class="hexagon hexagon--half">
+										</div>
+										<input type="text" disabled value="">
+										<h2>Weltmeister</h2>
+										<h2>2014</h2>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
