--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/dd570b47.main.css">
+	<link rel="stylesheet" href="styles/111966b8.main.css">
 	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
 </head>
 
@@ -26,93 +26,144 @@
 	</h1>
 
 	<div class="knockout-matches">
-		<div class="knockout__ui-group knockout__ui-group--three">
-			<div class="hexagon"></div>
-			<div class="hexagon"></div>
-			<div class="hexagon"></div>
-			<div class="hexagon hexagon--h-g hexagon--full">
-				<div class="hexagon__background">
-					<div id="bo16-8" class="hexagon__content match match--knockout">
+		<div class="knockout-matches--bo16-qf">
+			<div class="knockout__ui-group knockout__ui-group--three">
+				<div class="hexagon"></div>
+				<div class="hexagon"></div>
+				<div class="hexagon"></div>
+				<div class="hexagon hexagon--h-g hexagon--full">
+					<div class="hexagon__background">
+						<div id="bo16-8" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--spacer"></div>
+				<div class="hexagon hexagon--qf hexagon--full">
+					<div class="hexagon__background">
+						<div id="qf-3" class="hexagon__content match match--knockout">
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="hexagon hexagon--spacer"></div>
-			<div class="hexagon hexagon--qf hexagon--full">
-				<div class="hexagon__background">
-					<div id="qf-3" class="hexagon__content match match--knockout">
+			<div class="knockout__ui-group knockout__ui-group--two">
+				<div class="hexagon hexagon--push">
+				</div>
+				<div class="hexagon hexagon--e-f">
+					<div class="hexagon__background">
+						<div id="bo16-3" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--f-e">
+					<div class="hexagon__background">
+						<div id="bo16-7" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--g-h">
+					<div class="hexagon__background">
+						<div id="bo16-4" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--qf">
+					<div class="hexagon__background">
+						<div id="qf-1" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--qf hexagon--full">
+					<div class="hexagon__background">
+						<div id="qf-4" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="knockout__ui-group knockout__ui-group--one">
+				<div class="hexagon hexagon--a-b">
+					<div class="hexagon__background">
+						<div id="bo16-1" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--b-a">
+					<div class="hexagon__background">
+						<div id="bo16-5" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--c-d">
+					<div class="hexagon__background">
+						<div id="bo16-2" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--d-c hexagon--full">
+					<div class="hexagon__background">
+						<div id="bo16-6" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--spacer">
+				</div>
+				<div class="hexagon hexagon--qf hexagon--full">
+					<div class="hexagon__background">
+						<div id="qf-2" class="hexagon__content match match--knockout">
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="knockout__ui-group knockout__ui-group--two">
-			<div class="hexagon hexagon--push">
-			</div>
-			<div class="hexagon hexagon--e-f">
-				<div class="hexagon__background">
-					<div id="bo16-3" class="hexagon__content match match--knockout">
+		<div class="knockout-matches--sf-final">
+			<div class="knockout__ui-group knockout__ui-group--sf knockout__ui-group--two">
+				<div class="hexagon hexagon--sf">
+					<div class="hexagon__background">
+						<div id="sf-1" class="hexagon__content match match--knockout">
+						</div>
+					</div>
+				</div>
+				<div class="hexagon hexagon--sf hexagon--full">
+					<div class="hexagon__background">
+						<div id="sf-2" class="hexagon__content match match--knockout">
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="hexagon hexagon--f-e">
-				<div class="hexagon__background">
-					<div id="bo16-7" class="hexagon__content match match--knockout">
+			<div class="knockout__ui-group knockout__ui-group--three">
+				<div class="hexagon hexagon--consolation hexagon--push hexagon--full">
+					<div class="hexagon__background">
+						<div id="consolation" class="hexagon__content match match--knockout">
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="hexagon hexagon--g-h">
-				<div class="hexagon__background">
-					<div id="bo16-4" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--qf">
-				<div class="hexagon__background">
-					<div id="qf-1" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--qf hexagon--full">
-				<div class="hexagon__background">
-					<div id="qf-4" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="knockout__ui-group knockout__ui-group--one">
-			<div class="hexagon hexagon--a-b">
-				<div class="hexagon__background">
-					<div id="bo16-1" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--b-a">
-				<div class="hexagon__background">
-					<div id="bo16-5" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--c-d">
-				<div class="hexagon__background">
-					<div id="bo16-2" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--d-c hexagon--full">
-				<div class="hexagon__background">
-					<div id="bo16-6" class="hexagon__content match match--knockout">
-					</div>
-				</div>
-			</div>
-			<div class="hexagon hexagon--spacer">
-			</div>
-			<div class="hexagon hexagon--qf hexagon--full">
-				<div class="hexagon__background">
-					<div id="qf-2" class="hexagon__content match match--knockout">
+			<div class="knockout__ui-group knockout__ui-group--one">
+				<div class="hexagon hexagon--double">
+					<div class="hexagon__background hexagon__background--double">
+						<div class="hexagon__content hexagon__content--double">
+							<div class="hexagon hexagon--final hexagon--full">
+								<div class="hexagon__background">
+									<div id="final" class="hexagon__content match match--knockout">
+									</div>
+								</div>
+							</div>
+							<div id="champion" class="hexagon hexagon--champion hexagon--full">
+								<div class="hexagon__background">
+									<div id="champion" class="hexagon__content">
+										<div class="hexagon hexagon--half">
+										</div>
+										<input type="text" disabled="disabled" value="">
+										<h2>Weltmeister</h2>
+										<h2>2014</h2>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+</div>
 
 	<div class="group-matches">
 		<div class="group group--a"></div>
@@ -141,7 +192,7 @@
 
 	<script src="scripts/d41d8cd9.plugins.js"></script>
 
-	<script src="scripts/70662f98.main.js"></script>
+	<script src="scripts/036c818b.main.js"></script>
 
 	<script>
 		$(document).ready(function() {
@@ -499,18 +550,18 @@
 					],
 					semiFinals: [
 						[
-							['QF 1', 'QF 2'], '07/08/2014 22:00', '05'
+							['VF 1', 'VF 2'], '07/08/2014 22:00', '05'
 						],
 						[
-							['QF 3', 'QF 4'], '07/09/2014 22:00', '07'
+							['VF 3', 'VF 4'], '07/09/2014 22:00', '07'
 						]
 					],
 					finals: [
 						[
-							['SF 1', 'SF 2'], '07/13/2014 21:00', '06'
+							['HF 1', 'HF 2'], '07/13/2014 21:00', '06'
 						],
 						[
-							['SF 1', 'SF 2'], '07/12/2014 22:00', '10'
+							['HF 1', 'HF 2'], '07/12/2014 22:00', '10'
 						]
 					]
 				}
