A little layout and meta info

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<!-- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
-	<title>WorldCupBracket</title>
+	<title>zeroseven WM Spielplan</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -180,11 +180,12 @@
 		<div class="group group--h"></div>
 	</div>
 
-	<footer class="cf">
-		<div class="float--left">
+	<footer class="cf text--center vertical--middle">
+		<div class="float--left text--left">
 			<a id="reset" href="#reset">Alle Ergebnisse löschen</a><br/>
 			<a href="http://github.com/zeroseven/wc14-bracket/issues">Fehler Melden</a>
 		</div>
+		Best Viewed Large &#x2122;
 		<div class="media float--right">
 			<img class="media__img media__img--rev" src="zeroseven.png" alt="zeroseven design studios" height="30" />
 			<div class="media__body text--right">
