--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
+											<img src="trophy.svg" alt="" />
 										</div>
 										<input type="text" disabled value="">
 										<h2>Weltmeister</h2>
