--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<!-- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
-	<title>WorldCupBracket</title>
+	<title>zeroseven WM Spielplan</title>
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=1920">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/111966b8.main.css">
+	<link rel="stylesheet" href="styles/e647bc1f.main.css">
 	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
 </head>
 
@@ -151,6 +151,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
+											<img src="trophy.svg" alt="">
 										</div>
 										<input type="text" disabled="disabled" value="">
 										<h2>Weltmeister</h2>
@@ -163,7 +164,7 @@
 				</div>
 			</div>
 		</div>
-</div>
+	</div>
 
 	<div class="group-matches">
 		<div class="group group--a"></div>
@@ -175,6 +176,21 @@
 		<div class="group group--g"></div>
 		<div class="group group--h"></div>
 	</div>
+
+	<footer class="cf text--center vertical--middle">
+		<div class="float--left text--left">
+			<a id="reset" href="#reset">Alle Ergebnisse löschen</a><br>
+			<a href="http://github.com/zeroseven/wc14-bracket/issues">Fehler Melden</a>
+		</div>
+		Best Viewed Large &#x2122;
+		<div class="media float--right">
+			<img class="media__img media__img--rev" src="zeroseven.png" alt="zeroseven design studios" height="30">
+			<div class="media__body text--right">
+				Für euch und uns aus den zeroseven design studios.<br>
+				<a href="http://www.zeroseven.de">www.zeroseven.de</a>
+			</div>
+		</div>
+	</footer>
 
 
 
@@ -192,11 +208,20 @@
 
 	<script src="scripts/d41d8cd9.plugins.js"></script>
 
-	<script src="scripts/036c818b.main.js"></script>
+	<script src="scripts/651252fc.main.js"></script>
 
 	<script>
 		$(document).ready(function() {
 			'use strict';
+
+			$('#reset').on('click', function() {
+				if(window.confirm('Wirklich alle Eingaben zurücksetzten?') === true) {
+					delete localStorage.results;
+					window.location.reload();
+				}
+				return false;
+			});
+
 			WorldCupBracket.init({
 				stadiums: [{
 					id: '01',
@@ -558,10 +583,10 @@
 					],
 					finals: [
 						[
-							['HF 1', 'HF 2'], '07/13/2014 21:00', '06'
+							['HF 1', 'HF 2'], '07/12/2014 22:00', '10'
 						],
 						[
-							['HF 1', 'HF 2'], '07/12/2014 22:00', '10'
+							['HF 1', 'HF 2'], '07/13/2014 21:00', '06'
 						]
 					]
 				}
