Fixed image paths & grunt config for images

--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
-											<img src="trophy.svg" alt="" />
+											<img src="images/trophy.svg" alt="" />
 										</div>
 										<input type="text" disabled value="">
 										<h2>Weltmeister</h2>
@@ -188,7 +188,7 @@
 		</div>
 		Best Viewed Large &#x2122;
 		<div class="media float--right">
-			<img class="media__img media__img--rev" src="zeroseven.png" alt="zeroseven design studios" height="30" />
+			<img class="media__img media__img--rev" src="images/zeroseven.png" alt="zeroseven design studios" height="30" />
 			<div class="media__body text--right">
 				Für euch und uns aus den zeroseven design studios.<br/>
 				<a href="http://www.zeroseven.de">www.zeroseven.de</a>
