--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html class="no-js">
+<html class="no-js" lang="de">
 
 <head>
 	<meta charset="utf-8">
 	<!-- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
 	<title>zeroseven WM Spielplan</title>
-	<meta name="description" content="">
+	<meta name="description" content="Ein interaktiver Spielplan für die Fussballweltmeisterschaft 2014 in Brasilien. Für euch und uns aus den zeroseven design studios!">
+	<meta name="og:image" content="images/screenshot.png">
 	<meta name="viewport" content="width=1920">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/e647bc1f.main.css">
+	<link rel="stylesheet" href="styles/4e5297cb.main.css">
 	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
 </head>
 
@@ -151,7 +152,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
-											<img src="trophy.svg" alt="">
+											<img src="images/08c42ef7.trophy.svg" alt="">
 										</div>
 										<input type="text" disabled="disabled" value="">
 										<h2>Weltmeister</h2>
@@ -184,7 +185,7 @@
 		</div>
 		Best Viewed Large &#x2122;
 		<div class="media float--right">
-			<img class="media__img media__img--rev" src="zeroseven.png" alt="zeroseven design studios" height="30">
+			<img class="media__img media__img--rev" src="images/10610c33.zeroseven.png" alt="zeroseven design studios" height="30">
 			<div class="media__body text--right">
 				Für euch und uns aus den zeroseven design studios.<br>
 				<a href="http://www.zeroseven.de">www.zeroseven.de</a>
