--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 	<!-- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
 	<title>zeroseven WM Spielplan</title>
 	<meta name="description" content="Ein interaktiver Spielplan für die Fussballweltmeisterschaft 2014 in Brasilien. Für euch und uns aus den zeroseven design studios!">
-	<meta name="og:image" content="images/screenshot.png">
+
+	<meta property="og:site_name" content="zeroseven design studios">
+	<meta property="og:title" content="zeroseven WM Spielplan">
+	<meta property="og:description" content="Ein interaktiver Spielplan für die Fussballweltmeisterschaft 2014 in Brasilien. Für euch und uns aus den zeroseven design studios!">
+	<meta property="og:image" content="https://raw.githubusercontent.com/zeroseven/wc14-bracket/master/app/images/screenshot.png">
+	<meta property="og:url" content="http://zeroseven.github.io/wc14-bracket/?utm_source=facebook&utm_medium=share&utm_campaign=wc-bracket">
+
 	<meta name="viewport" content="width=1920">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/4e5297cb.main.css">
+	<link rel="stylesheet" href="styles/4e5297cb.main.css"/>
 	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
 </head>
 
