Added stadium view

--- a/app/index.html
+++ b/app/index.html
@@ -181,6 +181,14 @@
 		<div class="group group--h"></div>
 	</div>
 
+	<div class="stadium">
+		<div class="stadium-view"></div>
+		<div class="stadium-table-container">
+				<h2>Stadionübersicht</h2>
+				<table class="stadium-table"></table>
+		</div>
+	</div>
+
 	<footer class="cf text--center vertical--middle">
 		<div class="float--left text--left">
 			<a id="reset" href="#reset">Alle Ergebnisse löschen</a><br/>
@@ -231,6 +239,7 @@
 	<script src="scripts/views/group.js"></script>
 	<script src="scripts/collections/match.js"></script>
 	<script src="scripts/views/match.js"></script>
+	<script src="scripts/views/stadium.js"></script>
 	<!-- endbuild -->
 
 	<script>
