--- a/app/index.html
+++ b/app/index.html
@@ -177,25 +177,26 @@
 		</div>
 	</div>
 
-	<div class="group-matches">
-		<div class="group group--a"></div>
-		<div class="group group--b"></div>
-		<div class="group group--c"></div>
-		<div class="group group--d"></div>
-		<div class="group group--e"></div>
-		<div class="group group--f"></div>
-		<div class="group group--g"></div>
-		<div class="group group--h"></div>
-	</div>
+	<div>
+		<div class="stadium">
+			<div class="stadium-view"></div>
+			<div class="stadium-table-container">
+					<h2>Stadionübersicht</h2>
+					<table class="stadium-table"></table>
+			</div>
+		</div>
 
-	<div class="stadium">
-		<div class="stadium-view"></div>
-		<div class="stadium-table-container">
-				<h2>Stadionübersicht</h2>
-				<table class="stadium-table"></table>
+		<div class="group-matches">
+			<div class="group group--a"></div>
+			<div class="group group--b"></div>
+			<div class="group group--c"></div>
+			<div class="group group--d"></div>
+			<div class="group group--e"></div>
+			<div class="group group--f"></div>
+			<div class="group group--g"></div>
+			<div class="group group--h"></div>
 		</div>
 	</div>
-
 	<footer class="cf text--center vertical--middle">
 		<div class="float--left text--left">
 			<a id="reset" href="#reset">Alle Ergebnisse löschen</a><br/>
