--- a/app/index.html
+++ b/app/index.html
@@ -248,6 +248,7 @@
 	<script src="scripts/collections/match.js"></script>
 	<script src="scripts/views/match.js"></script>
 	<script src="scripts/views/stadium.js"></script>
+<script src="scripts/views/champion.js"></script>
 	<!-- endbuild -->
 
 	<script>
